# Blood-on-the-Clocktower---Official-Data-Sync

./: .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  CLAUDE.md  CLEANUP_HANDOVER.md  CONTRIBUTING.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  TODO.md  biome.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
data/: manifest.json
data/characters/: all_characters.json
data/characters/bmr/: apprentice.json  assassin.json  bishop.json  chambermaid.json  courtier.json  devilsadvocate.json  exorcist.json  fool.json  gambler.json  godfather.json  goon.json  gossip.json  grandmother.json  innkeeper.json  judge.json  lunatic.json  mastermind.json  matron.json  minstrel.json  moonchild.json  pacifist.json  po.json  professor.json  pukka.json  sailor.json  shabaloth.json  tealady.json  tinker.json  voudon.json  zombuul.json
data/characters/carousel/: acrobat.json  alchemist.json  alhadikhia.json  alsaahir.json  amnesiac.json  atheist.json  balloonist.json  banshee.json  boffin.json  boomdandy.json  bountyhunter.json  cannibal.json  choirboy.json  cultleader.json  damsel.json  engineer.json  farmer.json  fearmonger.json  fisherman.json  gangster.json  general.json  gnome.json  goblin.json  golem.json  harpy.json  hatter.json  heretic.json  hermit.json  highpriestess.json  huntsman.json  kazali.json  king.json  knight.json  legion.json  leviathan.json  lilmonsta.json  lleech.json  lordoftyphon.json  lycanthrope.json  magician.json  (+28 more)
data/characters/fabled/: angel.json  buddhist.json  deusexfiasco.json  doomsayer.json  duchess.json  ferryman.json  fibbin.json  fiddler.json  hellslibrarian.json  revolutionary.json  sentinel.json  spiritofivory.json  toymaker.json
data/characters/loric/: bigwig.json  bootlegger.json  gardener.json  stormcatcher.json  tor.json  zenomancer.json
data/characters/snv/: artist.json  barber.json  barista.json  bonecollector.json  butcher.json  cerenovus.json  clockmaker.json  deviant.json  dreamer.json  eviltwin.json  fanggu.json  flowergirl.json  harlot.json  juggler.json  klutz.json  mathematician.json  mutant.json  nodashii.json  oracle.json  philosopher.json  pithag.json  sage.json  savant.json  seamstress.json  snakecharmer.json  sweetheart.json  towncrier.json  vigormortis.json  vortox.json  witch.json
data/characters/tb/: baron.json  beggar.json  bureaucrat.json  butler.json  chef.json  drunk.json  empath.json  fortuneteller.json  gunslinger.json  imp.json  investigator.json  librarian.json  mayor.json  monk.json  poisoner.json  ravenkeeper.json  recluse.json  saint.json  scapegoat.json  scarletwoman.json  slayer.json  soldier.json  spy.json  thief.json  undertaker.json  virgin.json  washerwoman.json
examples/: update_checker.py
research/: All Characters.json  CLAUDE_ARCHIVE.md  COMPLETE_DATA_EXTRACTION.md  EXPORT_ANALYSIS.md  FLAVOR_TEXT_RESEARCH.md  FLAVOR_TEXT_STRATEGY.md  HAR_ANALYSIS.md  HTML_STRUCTURE_ANALYSIS.md  JINX_EXTRACTION.md  README.md  SCRAPING_PLAN.md  SETUP_FLAG_DETECTION.md  SPECIAL_FIELD_DETECTION.md  night_order_data.json
src/: __init__.py
src/scrapers/: __init__.py  character_scraper.py  config.py  extractors.py  image_downloader.py  parsers.py  validation.py  writers.py
src/transformers/: __init__.py  flavor_fetcher.py  packager.py  reminder_fetcher.py
src/utils/: __init__.py  data_loader.py  http_client.py  logger.py  manifest_utils.py  wiki_client.py
src/validators/: __init__.py  schema_validator.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_http_client.py
tests/unit/: test_data_loader.py  test_parsers.py  test_schema_validator.py  test_wiki_client.py  test_writers.py
